dyforty7-user cards

--- a/DOM-TASK/index.html
+++ b/DOM-TASK/index.html
@@ -14,9 +14,9 @@
 <body>
  <main>
 <div class="card">
-   <img src="https://images.unsplash.com/photo-1706822592725-7e095b68b625?q=80&w=380&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""> 
+   <img src="https://images.unsplash.com/photo-1768127502130-bca3e208eba6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw0Nnx8fGVufDB8fHx8fA%3D%3D" alt=""> 
    <i class="ri-heart-3-fill"></i>
-   <h2>Zara  Khan</h2>
+   <h2></h2>
 
 </div>
     
