virtual piano better than others

--- a/virtual-piano/index.html
+++ b/virtual-piano/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Virtual Piano Keyboard</h1>
+  <h1>Virtual Piano Keyboard</h1>
 
   <div class="controls">
     <button>🎹 Real Keys</button>
@@ -20,107 +20,98 @@
 
   <div class="piano">
 
-  <div class="octave octave-1">
+    <!-- Octave 1 (visual only) -->
+    <div class="octave octave-1">
+      <div class="key white"></div>
+      <div class="key white"></div>
+      <div class="key white"></div>
+      <div class="key white"></div>
+      <div class="key white"></div>
+      <div class="key white"></div>
+      <div class="key white"></div>
 
-    <!-- White keys (7) -->
-    <div class="key white"></div>
-    <div class="key white"></div>
-    <div class="key white"></div>
-    <div class="key white"></div>
-    <div class="key white"></div>
-    <div class="key white"></div>
-    <div class="key white"></div>
+      <div class="key black c-sharp"></div>
+      <div class="key black d-sharp"></div>
+      <div class="key black f-sharp"></div>
+      <div class="key black g-sharp"></div>
+      <div class="key black a-sharp"></div>
+    </div>
 
-    <!-- Black keys (5) -->
-    <div class="key black c-sharp"></div>
-    <div class="key black d-sharp"></div>
-    <div class="key black f-sharp"></div>
-    <div class="key black g-sharp"></div>
-    <div class="key black a-sharp"></div>
+    <!-- Octave 2 -->
+    <div class="octave octave-2">
+      <div class="key white" data-note="C" data-key="Q">Q</div>
+      <div class="key white" data-note="D" data-key="W">W</div>
+      <div class="key white" data-note="E" data-key="E">E</div>
+      <div class="key white" data-note="F" data-key="R">R</div>
+      <div class="key white" data-note="G" data-key="T">T</div>
+      <div class="key white" data-note="A" data-key="Y">Y</div>
+      <div class="key white" data-note="B" data-key="U">U</div>
+
+      <div class="key black" data-note="C#" data-key="2">2</div>
+      <div class="key black" data-note="D#" data-key="3">3</div>
+      <div class="key black" data-note="F#" data-key="5">5</div>
+      <div class="key black" data-note="G#" data-key="6">6</div>
+      <div class="key black" data-note="A#" data-key="7">7</div>
+    </div>
+
+    <!-- Octave 3 -->
+    <div class="octave octave-3">
+      <div class="key white" data-note="C" data-key="I">I</div>
+      <div class="key white" data-note="D" data-key="O">O</div>
+      <div class="key white" data-note="E" data-key="P">P</div>
+      <div class="key white" data-note="F" data-key="Z">Z</div>
+      <div class="key white" data-note="G" data-key="X">X</div>
+      <div class="key white" data-note="A" data-key="C">C</div>
+      <div class="key white" data-note="B" data-key="V">V</div>
+
+      <div class="key black" data-note="C#" data-key="S">S</div>
+      <div class="key black" data-note="D#" data-key="9">9</div>
+      <div class="key black" data-note="F#" data-key="0">0</div>
+      <div class="key black" data-note="G#" data-key="D">D</div>
+      <div class="key black" data-note="A#" data-key="F">F</div>
+    </div>
+
+    <!-- Octave 4 -->
+    <div class="octave octave-4">
+      <div class="key white" data-note="C" data-key="B">B</div>
+      <div class="key white" data-note="D" data-key="N">N</div>
+      <div class="key white" data-note="E" data-key="M">M</div>
+      <div class="key white" data-note="F" data-key=",">,</div>
+      <div class="key white" data-note="G" data-key=".">.</div>
+      <div class="key white" data-note="A" data-key="/">/</div>
+      <div class="key white"></div>
+
+      <div class="key black" data-note="C#" data-key="H">H</div>
+      <div class="key black" data-note="D#" data-key="J">J</div>
+      <div class="key black" data-note="F#" data-key="L">L</div>
+      <div class="key black" data-note="G#" data-key=";">;</div>
+      <div class="key black" data-note="A#" data-key="'">'</div>
+    </div>
+
+    <!-- Octave 5 (visual only) -->
+    <div class="octave octave-5">
+      <div class="key white"></div>
+      <div class="key white"></div>
+      <div class="key white"></div>
+      <div class="key white"></div>
+      <div class="key white"></div>
+      <div class="key white"></div>
+      <div class="key white"></div>
+
+      <div class="key black c-sharp"></div>
+      <div class="key black d-sharp"></div>
+      <div class="key black f-sharp"></div>
+      <div class="key black g-sharp"></div>
+      <div class="key black a-sharp"></div>
+    </div>
+
+    <!-- Octave 6 (last C) -->
+    <div class="octave octave-6">
+      <div class="key white"></div>
+    </div>
 
   </div>
-<div class="octave octave-2">   
-    <!-- White Keys -->
-    <div class="key white" data-note="C" data-key="Q">Q</div>
-    <div class="key white" data-note="D" data-key="W">W</div>
-    <div class="key white" data-note="E" data-key="E">E</div>
-    <div class="key white" data-note="F" data-key="R">R</div>
-    <div class="key white" data-note="G" data-key="T">T</div>
-    <div class="key white" data-note="A" data-key="Y">Y</div>
-    <div class="key white" data-note="B" data-key="U">U</div>
 
-    <!-- Black Keys -->
-    <div class="key black" data-note="C#" data-key="2">2</div>
-    <div class="key black" data-note="D#" data-key="3">3</div>
-    <div class="key black" data-note="F#" data-key="5">5</div>
-    <div class="key black" data-note="G#" data-key="6">6</div>
-    <div class="key black" data-note="A#" data-key="7">7</div>
-</div>
-
-<div class="octave octave-3">   
-    <!-- White Keys -->
-    <div class="key white" data-note="C" data-key="I">I</div>
-    <div class="key white" data-note="D" data-key="K">K</div>
-    <div class="key white" data-note="E" data-key="L">L</div>
-    <div class="key white" data-note="F" data-key=";">;</div>
-    <div class="key white" data-note="G" data-key="'">'</div>
-    <div class="key white" data-note="A" data-key=",">,</div>
-    <div class="key white" data-note="B" data-key=".">.</div>
-
-    <!-- Black Keys -->
-    <div class="key black" data-note="C#" data-key="8">8</div>
-    <div class="key black" data-note="D#" data-key="9">9</div>
-    <div class="key black" data-note="F#" data-key="0">0</div>
-    <div class="key black" data-note="G#" data-key="-">-</div>
-    <div class="key black" data-note="A#" data-key="=">=</div>
-</div>
-<div class="octave octave-4">   
-    <!-- White Keys -->
-    <div class="key white" data-note="C" data-key="Z">Z</div>
-    <div class="key white" data-note="D" data-key="X">X</div>
-    <div class="key white" data-note="E" data-key="C">C</div>
-    <div class="key white" data-note="F" data-key="V">V</div>
-    <div class="key white" data-note="G" data-key="B">B</div>
-    <div class="key white" data-note="A" data-key="N">N</div>
-    <div class="key white" data-note="B" data-key="M">M</div>
-
-    <!-- Black Keys -->
-    <div class="key black" data-note="C#" data-key="1">1</div>
-    <div class="key black" data-note="D#" data-key="2">2</div>
-    <div class="key black" data-note="F#" data-key="4">4</div>
-    <div class="key black" data-note="G#" data-key="5">5</div>
-    <div class="key black" data-note="A#" data-key="6">6</div>
-</div>
-
-<div class="octave octave-5">
-
-    <!-- White keys (7) -->
-    <div class="key white"></div>
-    <div class="key white"></div>
-    <div class="key white"></div>
-    <div class="key white"></div>
-    <div class="key white"></div>
-    <div class="key white"></div>
-    <div class="key white"></div>
-
-    <!-- Black keys (5) -->
-    <div class="key black c-sharp"></div>
-    <div class="key black d-sharp"></div>
-    <div class="key black f-sharp"></div>
-    <div class="key black g-sharp"></div>
-    <div class="key black a-sharp"></div>
-
-  </div>
-  <div class="octave octave-6">
-
-    <!-- White keys (1) -->
-    <div class="key white"></div>
-    
-  </div>
-  
-</div>
-
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
