--- a/virtual-piano/index.html
+++ b/virtual-piano/index.html
@@ -7,111 +7,112 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Virtual Piano Keyboard</h1>
 
-  <div class="controls">
-    <button>🎹 Real Keys</button>
-    <button>🎶 Sustain</button>
-    <button>A Letter Notes</button>
-    <button>⏱ Metronome</button>
-    <button>🔍 Zoom</button>
-    <button>⛶ Full Screen</button>
+<h1>Virtual Piano Keyboard</h1>
+
+<div class="controls">
+  <button>🎹 Real Keys</button>
+  <button>🎶 Sustain</button>
+  <button>A Letter Notes</button>
+  <button>⏱ Metronome</button>
+  <button>🔍 Zoom</button>
+  <button>⛶ Full Screen</button>
+</div>
+
+<div class="piano">
+
+  <!-- OCTAVE 1 -->
+  <div class="octave">
+    <div class="key white" data-note="130.81" data-key="1">1</div>
+    <div class="key white" data-note="146.83" data-key="2">2</div>
+    <div class="key white" data-note="164.81" data-key="3">3</div>
+    <div class="key white" data-note="174.61" data-key="4">4</div>
+    <div class="key white" data-note="196.00" data-key="5">5</div>
+    <div class="key white" data-note="220.00" data-key="6">6</div>
+    <div class="key white" data-note="246.94" data-key="7">7</div>
+
+    <div class="key black" data-note="138.59" data-key="!">!</div>
+    <div class="key black" data-note="155.56" data-key="@">@</div>
+    <div class="key black" data-note="185.00" data-key="$">$</div>
+    <div class="key black" data-note="207.65" data-key="%">%</div>
+    <div class="key black" data-note="233.08" data-key="^">^</div>
   </div>
 
-  <div class="piano">
+  <!-- OCTAVE 2 -->
+  <div class="octave">
+    <div class="key white" data-note="261.63" data-key="Q">Q</div>
+    <div class="key white" data-note="293.66" data-key="W">W</div>
+    <div class="key white" data-note="329.63" data-key="E">E</div>
+    <div class="key white" data-note="349.23" data-key="R">R</div>
+    <div class="key white" data-note="392.00" data-key="T">T</div>
+    <div class="key white" data-note="440.00" data-key="Y">Y</div>
+    <div class="key white" data-note="493.88" data-key="U">U</div>
 
-    <!-- Octave 1 (visual only) -->
-    <div class="octave octave-1">
-      <div class="key white"></div>
-      <div class="key white"></div>
-      <div class="key white"></div>
-      <div class="key white"></div>
-      <div class="key white"></div>
-      <div class="key white"></div>
-      <div class="key white"></div>
-
-      <div class="key black c-sharp"></div>
-      <div class="key black d-sharp"></div>
-      <div class="key black f-sharp"></div>
-      <div class="key black g-sharp"></div>
-      <div class="key black a-sharp"></div>
-    </div>
-
-    <!-- Octave 2 -->
-    <div class="octave octave-2">
-      <div class="key white" data-note="C" data-key="Q">Q</div>
-      <div class="key white" data-note="D" data-key="W">W</div>
-      <div class="key white" data-note="E" data-key="E">E</div>
-      <div class="key white" data-note="F" data-key="R">R</div>
-      <div class="key white" data-note="G" data-key="T">T</div>
-      <div class="key white" data-note="A" data-key="Y">Y</div>
-      <div class="key white" data-note="B" data-key="U">U</div>
-
-      <div class="key black" data-note="C#" data-key="2">2</div>
-      <div class="key black" data-note="D#" data-key="3">3</div>
-      <div class="key black" data-note="F#" data-key="5">5</div>
-      <div class="key black" data-note="G#" data-key="6">6</div>
-      <div class="key black" data-note="A#" data-key="7">7</div>
-    </div>
-
-    <!-- Octave 3 -->
-    <div class="octave octave-3">
-      <div class="key white" data-note="C" data-key="I">I</div>
-      <div class="key white" data-note="D" data-key="O">O</div>
-      <div class="key white" data-note="E" data-key="P">P</div>
-      <div class="key white" data-note="F" data-key="Z">Z</div>
-      <div class="key white" data-note="G" data-key="X">X</div>
-      <div class="key white" data-note="A" data-key="C">C</div>
-      <div class="key white" data-note="B" data-key="V">V</div>
-
-      <div class="key black" data-note="C#" data-key="S">S</div>
-      <div class="key black" data-note="D#" data-key="9">9</div>
-      <div class="key black" data-note="F#" data-key="0">0</div>
-      <div class="key black" data-note="G#" data-key="D">D</div>
-      <div class="key black" data-note="A#" data-key="F">F</div>
-    </div>
-
-    <!-- Octave 4 -->
-    <div class="octave octave-4">
-      <div class="key white" data-note="C" data-key="B">B</div>
-      <div class="key white" data-note="D" data-key="N">N</div>
-      <div class="key white" data-note="E" data-key="M">M</div>
-      <div class="key white" data-note="F" data-key=",">,</div>
-      <div class="key white" data-note="G" data-key=".">.</div>
-      <div class="key white" data-note="A" data-key="/">/</div>
-      <div class="key white"></div>
-
-      <div class="key black" data-note="C#" data-key="H">H</div>
-      <div class="key black" data-note="D#" data-key="J">J</div>
-      <div class="key black" data-note="F#" data-key="L">L</div>
-      <div class="key black" data-note="G#" data-key=";">;</div>
-      <div class="key black" data-note="A#" data-key="'">'</div>
-    </div>
-
-    <!-- Octave 5 (visual only) -->
-    <div class="octave octave-5">
-      <div class="key white"></div>
-      <div class="key white"></div>
-      <div class="key white"></div>
-      <div class="key white"></div>
-      <div class="key white"></div>
-      <div class="key white"></div>
-      <div class="key white"></div>
-
-      <div class="key black c-sharp"></div>
-      <div class="key black d-sharp"></div>
-      <div class="key black f-sharp"></div>
-      <div class="key black g-sharp"></div>
-      <div class="key black a-sharp"></div>
-    </div>
-
-    <!-- Octave 6 (last C) -->
-    <div class="octave octave-6">
-      <div class="key white"></div>
-    </div>
-
+    <div class="key black" data-note="277.18" data-key="2">2</div>
+    <div class="key black" data-note="311.13" data-key="3">3</div>
+    <div class="key black" data-note="369.99" data-key="5">5</div>
+    <div class="key black" data-note="415.30" data-key="6">6</div>
+    <div class="key black" data-note="466.16" data-key="7">7</div>
   </div>
 
-  <script src="script.js"></script>
+  <!-- OCTAVE 3 -->
+  <div class="octave">
+    <div class="key white" data-note="523.25" data-key="I">I</div>
+    <div class="key white" data-note="587.33" data-key="O">O</div>
+    <div class="key white" data-note="659.25" data-key="P">P</div>
+    <div class="key white" data-note="698.46" data-key="Z">Z</div>
+    <div class="key white" data-note="783.99" data-key="X">X</div>
+    <div class="key white" data-note="880.00" data-key="C">C</div>
+    <div class="key white" data-note="987.77" data-key="V">V</div>
+
+    <div class="key black" data-note="554.37" data-key="S">S</div>
+    <div class="key black" data-note="622.25" data-key="D">D</div>
+    <div class="key black" data-note="739.99" data-key="G">G</div>
+    <div class="key black" data-note="830.61" data-key="H">H</div>
+    <div class="key black" data-note="932.33" data-key="J">J</div>
+  </div>
+
+  <!-- OCTAVE 4 -->
+  <div class="octave">
+    <div class="key white" data-note="1046.50" data-key="B">B</div>
+    <div class="key white" data-note="1174.66" data-key="N">N</div>
+    <div class="key white" data-note="1318.51" data-key="M">M</div>
+    <div class="key white" data-note="1396.91" data-key=",">,</div>
+    <div class="key white" data-note="1567.98" data-key=".">.</div>
+    <div class="key white" data-note="1760.00" data-key="/">/</div>
+    <div class="key white" data-note="1975.53" data-key="?">?</div>
+
+    <div class="key black" data-note="1108.73" data-key="H">H</div>
+    <div class="key black" data-note="1244.51" data-key="J">J</div>
+    <div class="key black" data-note="1479.98" data-key="L">L</div>
+    <div class="key black" data-note="1661.22" data-key=";">;</div>
+    <div class="key black" data-note="1864.66" data-key="'">'</div>
+  </div>
+
+  <!-- OCTAVE 5 -->
+  <div class="octave">
+    <div class="key white" data-note="2093.00" data-key="A">A</div>
+    <div class="key white" data-note="2349.32" data-key="S">S</div>
+    <div class="key white" data-note="2637.02" data-key="D">D</div>
+    <div class="key white" data-note="2793.83" data-key="F">F</div>
+    <div class="key white" data-note="3135.96" data-key="G">G</div>
+    <div class="key white" data-note="3520.00" data-key="H">H</div>
+    <div class="key white" data-note="3951.07" data-key="J">J</div>
+
+    <div class="key black" data-note="2217.46" data-key="W">W</div>
+    <div class="key black" data-note="2489.02" data-key="E">E</div>
+    <div class="key black" data-note="2959.96" data-key="T">T</div>
+    <div class="key black" data-note="3322.44" data-key="Y">Y</div>
+    <div class="key black" data-note="3729.31" data-key="U">U</div>
+  </div>
+
+  <!-- OCTAVE 6 -->
+  <div class="octave">
+    <div class="key white" data-note="4186.01" data-key="K">K</div>
+  </div>
+
+</div>
+
+<script src="script.js"></script>
 </body>
 </html>
