--- a/day-49/index.html
+++ b/day-49/index.html
@@ -8,16 +8,18 @@
 </head>
 <body>
     <div id="main">
-    <div id="elem">
-        Add Friend
-    </div>
-
-     <div id="elem">
-        Remove Friend
-    </div>
-
-     <div id="elem">
-        Add Friend
+        <div class="elem">
+            <h3>Sarthak</h3>
+            <button>Add Friend</button>
+        </div>
+        <div class="elem">
+            <h3>Anubhav</h3>
+            <button>Add Friend</button>
+        </div>
+        <div class="elem">
+            <h3>Harsh</h3>
+            <button>Add Friend</button>
+        </div>
     </div>
 
 
